-Fixed a bug that would cause other tabs to sometimes be visible on ipad when scrolling

--- a/fluxtream-web/src/main/webapp/less/flx.less
+++ b/fluxtream-web/src/main/webapp/less/flx.less
@@ -215,6 +215,7 @@ a.paginationLink {
 .application.dormant { //hacky way of fixing comment display bug
     position:fixed;
     top:0px;
+    left: 100%;
     margin-top:-1000px;
     height:500px;
     overflow:hidden;
@@ -228,6 +229,7 @@ a.paginationLink {
 .tab.dormant {        //hacky way of fixing comment display bug
     position:fixed;
     top:0px;
+    left: 100%;
     margin-top:-1000px;
     height:500px;
     overflow:hidden;
